--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
-    "nodemon": "^3.0.2"
+    "mysql2": "^3.6.5",
+    "nodemon": "^3.0.2",
+    "sequelize": "^6.35.2"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
   }
 }
