--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@react-three/drei": "^9.91.0",
     "@react-three/fiber": "^8.15.12",
     "@types/three": "^0.159.0",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "three": "^0.159.0"
