--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^9.91.0",
     "@react-three/fiber": "^8.15.12",
     "@types/three": "^0.159.0",
+    "98.css": "^0.1.20",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
