--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
+    "migrate": "npx sequelize-cli db:migrate",
+    "seed": "npx sequelize-cli db:seed:all",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "dependencies": {
