--- a/config/config.json
+++ b/config/config.json
@@ -15,7 +15,7 @@
   },
   "production": {
     "username": "root",
-    "password": "root",
+    "password": "KDemkZDcqJ8ndJiD102sRMCOMzoD4akp",
     "database": "portfolio",
     "host": "127.0.0.1",
     "dialect": "mysql"
