--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.20.1",
     "three": "^0.159.0"
   },
